@@ -65,6 +65,7 @@ Version 1.11.0-svn:
    * Added a Reset All button to Hotkey Settings dialog in preferences
      (feature/bug #3797)
    * Map editor now displays invisible overlay terrains on main map.
+   * Re-fogging does not occur in the middle of the player's turn.
 
  * Whiteboard
    * Fixed bug #19369 : Using planning mode can cause losing ability to move my
