@@ -412,15 +412,11 @@ size_t move_unit(move_unit_spectator* move_spectator,
 				bool continue_move = false, bool should_clear_shroud=true, bool is_replay=false,
 				bool* units_sighted_result = NULL);
 
-/** Function which recalculates the fog. */
+/// Function that recalculates the fog of war.
 void recalculate_fog(int side);
 
-/**
- * Function which will clear shroud away for the @a side
- * based on current unit positions.
- * Returns true if some shroud is actually cleared away.
- */
-bool clear_shroud(int side);
+/// Function that will clear shroud (and fog) based on current unit positions.
+bool clear_shroud(int side, bool reset_fog=false);
 
 /**
  * Function to apply pending shroud changes in the undo stack.
