@@ -457,7 +457,7 @@ void replay_controller::update_teams(){
 		gui_->set_team(show_team_ - 1, show_everything_);
 	}
 
-	::clear_shroud(next_team);
+	clear_shroud(next_team);
 
 	gui_->set_playing_team(next_team - 1);
 	gui_->invalidate_all();
